added basic logic

--- a/15_2/employee.html
+++ b/15_2/employee.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Employee</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h3>To get details of employee. Click the button.</h3>
+    <script src="./employee.js"></script>
+    <div>
+      <button onclick="EMP.getEmployee()">Get Details</button>
+      <button onclick="EMP.clearDetails()">Clear</button>
+    </div>
+
+    <p id="result"></p>
+  </body>
 </html>
