adding get set features

--- a/17_2/index.html
+++ b/17_2/index.html
@@ -17,6 +17,15 @@
     <br><br>
     <h3>Value of the variable: </h3>
     <p id="inputValueDisplay"></p>
+    <br><br>
+    <hr><br><br>
+    <h2>After learning from class on using get, set.</h2>
+    <br>
+    <h3>The input box:</h3>
+    <input type="text" id="change" onkeyup="update(event)">
+    <br><br>
+    <h3>After learning value of the variable: </h3>
+    <p id="disps"></p>
 
 </body>
 
